# vkguide

./: .gitmodules  CMakeLists.txt  README.md
asset/shader/: colored_triangle.vert  compile.zsh  textured_lit.frag  tri_mesh.frag  tri_mesh.vert  tri_mesh.vert.spv  triangle.vert
src/: log.cpp  log.h  main.cpp  vk-engine.cpp  vk-engine.h  vk-initializers.cpp  vk-initializers.h  vk_engine.cpp  vk_engine.h  vk_initializers.cpp  vk_initializers.h  vk_mesh.cpp  vk_mesh.h  vk_textures.cpp  vk_textures.h  vk_types.h
